# agentkit

./: .coverage  .env.example  .gitignore  AGENTKIT_OPSCORE_MODIFICATION_PLAN.md  AgentkitDevelopmentDoc.md  CI_CD_PLAN.md  DEVELOPMENT_PLAN.md  Dockerfile  PLANNING.md  README.md  TASK.md  TASK_5_3_PLAN.md  TASK_5_4_PLAN.md  TASK_B9_COMPLETION_PLAN.md  TESTING_STRATEGY.md  UAT_PLAN_TASK_4_5.md  docker-compose.yml  issues.json  locustfile.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
agentkit/api/: middleware.py
agentkit/cli/: main.py
agentkit/core/: agent.py  models.py
agentkit/llm_clients/: google_client.py  openai_client.py  openrouter_client.py
agentkit/memory/: short_term.py
agentkit/planning/: simple_planner.py
agentkit/registration/: storage.py
agentkit/sdk/: client.py
agentkit/tools/: __init__.py  execution.py  interface.py  llm_tool.py  mcp_proxy.py  registry.py  schemas.py
core/: __init__.py  agent.py
core/interfaces/: __init__.py  memory.py  planner.py  (+2 more)
docs/: TUTORIAL.md  agentkit_llm_context.txt  building_agents_with_llms.md  configuration.md  opscore_integration.md
examples/: README.md  llm_agent_example.py  opscore_aware_agent.py  ping_agent.py  requester_agent.py  responder_agent.py  sequential_tool_agent.py  tool_user_agent.py
memory/: __init__.py  short_term.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ops-core-info/: TASK.md
tests/: test_agent.py  test_memory.py  test_planning.py  test_tools.py
tools/: __init__.py  execution.py  registry.py  schemas.py
(+39 files in other folders)
