[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "Toolkit for building LLM-powered agents."
# readme = "README.md" # Optional: Add if/when README exists
requires-python = ">=3.8"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["agentkit"] # Look for packages inside the 'agentkit' directory

[tool.pytest.ini_options]
# Add asyncio config here proactively to avoid the warning
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
